billboard in progress

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <title>FavoriteMovies</title>
 </head>
 <body>
-  <div class="header">
-  <h1>Cartelera</h1>
-  </div>
+  <header>
+    <div class="header">
+            <img src='./img/claqueta.png' alt="Claqueta Logo" width="10%">
+            <h1 class="headerTittle">Yorgos Lanthimos</h1>
+    </div>
+</header>
   
   <div id="movieSection" class="cardsMovies">
 
@@ -20,4 +23,9 @@
 
   <script src="./js/index.js"></script>
 </body>
+
+<footer class= "footer">
+  <div>&copy;2022</div>
+</footer>
+
 </html>
