--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="header">
-            <img src='./img/claqueta.png' alt="Claqueta Logo" width="10%">
+            <img src='./img/claqueta.png' alt="Claqueta Logo" width="7%">
             <h1 class="headerTittle">Yorgos Lanthimos</h1>
     </div>
 </header>
@@ -25,7 +25,7 @@
 </body>
 
 <footer class= "footer">
-  <div>&copy;2022</div>
+  <div>&copy;elenarjonap2022</div>
 </footer>
 
 </html>
