--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="header">
             <img src='./img/claqueta.png' alt="Claqueta Logo" width="7%">
-            <h1 class="headerTittle">Yorgos Lanthimos</h1>
+            <h1 class="headerTittle">.Yorgos Lanthimos.</h1>
     </div>
 </header>
   
